--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <section class="banner">
-    <img src="assets/images/banner.jpg" alt="Banner Promosi" width="1200" height="400" />
+    <img src="assets/image/banner.jpg" alt="Banner Promosi" width="1200" height="400" />
   </section>
 
   <section class="form-section">
@@ -22,11 +22,11 @@
       <div class="game-options">
         <label class="game-option">
           <input type="radio" name="game" value="Mobile Legends" required />
-          <img src="assets/images/mlbb.png" alt="Mobile Legends" width="128" height="128" />
+          <img src="assets/image/mlbb.png" alt="Mobile Legends" width="128" height="128" />
         </label>
         <label class="game-option">
           <input type="radio" name="game" value="8 Ball Pool" required />
-          <img src="assets/images/8ball.png" alt="8 Ball Pool" width="128" height="128" />
+          <img src="assets/image/8ball.png" alt="8 Ball Pool" width="128" height="128" />
         </label>
       </div><br />
 
