--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="assets/style.css" />
   <style>
     body {
-      background: url('assets/image/background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
+  background: url('assets/image/background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: brightness(1.1);
+}
     }
     .popup {
       position: fixed;
@@ -41,11 +43,9 @@
   </style>
 </head>
 <body>
-  <header class="full-width-header">
-    <h1>Ucup Mamet Store</h1>
-  </header>
+  
 
-  <section class="banner">
+  <section class="banner" style="margin-top: 0;">
     <img src="assets/image/banner.jpg" alt="Banner Promosi" width="1200" height="400" />
   </section>
 
@@ -54,11 +54,11 @@
     <div class="game-options">
       <label class="game-option">
         <input type="radio" name="game" value="Mobile Legends" onclick="openPopup('mlbb')" />
-        <img src="assets/images/mlbb.png" alt="Mobile Legends" width="128" height="128" />
+        <img src="assets/image/mlbb.png" alt="Mobile Legends" width="128" height="128" />
       </label>
       <label class="game-option">
         <input type="radio" name="game" value="8 Ball Pool" onclick="openPopup('8ball')" />
-        <img src="assets/images/8ball.png" alt="8 Ball Pool" width="128" height="128" />
+        <img src="assets/image/8ball.png" alt="8 Ball Pool" width="128" height="128" />
       </label>
     </div>
   </section>
