--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   font-family: Arial, sans-serif;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: brightness(1.1);
+  
 }
     }
     .popup {
@@ -39,7 +39,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: rgba(0,0,0,0.5);
+      background: transparent;
       z-index: 999;
     }
   </style>
@@ -50,7 +50,7 @@
   <section class="banner" style="margin-top: 0;">
     <style>
       .banner img {
-        width: 1200px;
+        background-color: rgba(255, 255, 255, 0.7);
         height: 500px;
         object-fit: cover;
         border-radius: 10px;
@@ -66,7 +66,7 @@
     <div class="game-options">
       <label class="game-option">
         <input type="radio" name="game" value="Mobile Legends" onclick="openPopup('mlbb')" />
-        <img src="assets/images/mlbb.png" alt="Mobile Legends" width="128" height="128" />
+        <img src="assets/image/mlbb.png" alt="Mobile Legends" width="128" height="128" />
       </label>
       <label class="game-option">
         <input type="radio" name="game" value="8 Ball Pool" onclick="openPopup('8ball')" />
