--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   background-size: cover;
   font-family: Arial, sans-serif;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: transparent;
   
 }
     }
@@ -51,7 +51,7 @@
     <style>
       .banner img {
         background-color: rgba(255, 255, 255, 0.7);
-        height: 500px;
+        height: 350px;
         object-fit: cover;
         border-radius: 10px;
         display: block;
@@ -150,3 +150,4 @@
   </script>
 </body>
 </html>
+
