--- a/8ball.html
+++ b/8ball.html
@@ -13,12 +13,27 @@
       <label for="8ball-id">ID Pengguna:</label>
       <input type="text" id="8ball-id" required />
 
-      <label for="8ball-nominal">Pilih Nominal:</label>
-      <select id="8ball-nominal" required>
-        <option value="50.000 Coin">50.000 Coin</option>
-        <option value="125.000 Coin">125.000 Coin</option>
-        <option value="250.000 Coin">250.000 Coin</option>
-      </select>
+      <div class="nominal-section">
+  <p>Pilih Nominal:</p>
+  <div class="nominal-option">
+    <span>50.000 Coin - Rp10.000</span>
+    <button type="button" onclick="adjustQty(-1, 'qty1')">-</button>
+    <input type="number" id="qty1" value="0" min="0" readonly />
+    <button type="button" onclick="adjustQty(1, 'qty1')">+</button>
+  </div>
+  <div class="nominal-option">
+    <span>125.000 Coin - Rp25.000</span>
+    <button type="button" onclick="adjustQty(-1, 'qty2')">-</button>
+    <input type="number" id="qty2" value="0" min="0" readonly />
+    <button type="button" onclick="adjustQty(1, 'qty2')">+</button>
+  </div>
+  <div class="nominal-option">
+    <span>250.000 Coin - Rp50.000</span>
+    <button type="button" onclick="adjustQty(-1, 'qty3')">-</button>
+    <input type="number" id="qty3" value="0" min="0" readonly />
+    <button type="button" onclick="adjustQty(1, 'qty3')">+</button>
+  </div>
+</div>
 
       <label for="8ball-payment">Metode Pembayaran:</label>
       <select id="8ball-payment" required>
@@ -36,20 +51,45 @@
   </section>
 
   <script>
-    document.getElementById("topupForm").addEventListener("submit", function (e) {
-      e.preventDefault();
+  function adjustQty(amount, field) {
+    const input = document.getElementById(field);
+    let val = parseInt(input.value);
+    if (!isNaN(val)) {
+      val += amount;
+      if (val < 0) val = 0;
+      input.value = val;
+    }
+  }
 
-      const id = document.getElementById("8ball-id").value;
-      const nominal = document.getElementById("8ball-nominal").value;
-      const payment = document.getElementById("8ball-payment").value;
-      const name = document.getElementById("8ball-name").value;
+  document.getElementById("topupForm").addEventListener("submit", function (e) {
+    e.preventDefault();
 
-      const pesan = `🛒 Pesanan Top Up\nGame: 8 Ball Pool\nID: ${id}\nNominal: ${nominal}\nPembayaran: ${payment}\nNama: ${name}`;
-      const nomorAdmin = "6285713056206";
-      const url = `https://wa.me/${nomorAdmin}?text=${encodeURIComponent(pesan)}`;
+    const id = document.getElementById("8ball-id").value;
+    const payment = document.getElementById("8ball-payment").value;
+    const name = document.getElementById("8ball-name").value;
 
-      window.open(url, "_blank");
-    });
-  </script>
+    const qty1 = parseInt(document.getElementById("qty1").value);
+    const qty2 = parseInt(document.getElementById("qty2").value);
+    const qty3 = parseInt(document.getElementById("qty3").value);
+
+    let nominalList = [];
+    if (qty1 > 0) nominalList.push(`${qty1} x 50.000 Coin`);
+    if (qty2 > 0) nominalList.push(`${qty2} x 125.000 Coin`);
+    if (qty3 > 0) nominalList.push(`${qty3} x 250.000 Coin`);
+
+    const nominal = nominalList.join(', ');
+
+    const pesan = `🛒 Pesanan Top Up
+Game: 8 Ball Pool
+ID: ${id}
+Nominal: ${nominal}
+Pembayaran: ${payment}
+Nama: ${name}`;
+    const nomorAdmin = "6285713056206";
+    const url = `https://wa.me/${nomorAdmin}?text=${encodeURIComponent(pesan)}`;
+
+    window.open(url, "_blank");
+  });
+</script>
 </body>
 </html>
