--- a/mlbb.html
+++ b/mlbb.html
@@ -13,12 +13,27 @@
       <label for="mlbb-id">ID Pengguna:</label>
       <input type="text" id="mlbb-id" required />
 
-      <label for="mlbb-nominal">Pilih Nominal:</label>
-      <select id="mlbb-nominal" required>
-        <option value="86 Diamond">86 Diamond</option>
-        <option value="172 Diamond">172 Diamond</option>
-        <option value="344 Diamond">344 Diamond</option>
-      </select>
+      <div class="nominal-section">
+        <p>Pilih Nominal:</p>
+        <div class="nominal-option">
+          <span>86 Diamond - Rp15.000</span>
+          <button type="button" onclick="adjustQty(-1, 'qty1')">-</button>
+          <input type="number" id="qty1" value="0" min="0" readonly />
+          <button type="button" onclick="adjustQty(1, 'qty1')">+</button>
+        </div>
+        <div class="nominal-option">
+          <span>172 Diamond - Rp30.000</span>
+          <button type="button" onclick="adjustQty(-1, 'qty2')">-</button>
+          <input type="number" id="qty2" value="0" min="0" readonly />
+          <button type="button" onclick="adjustQty(1, 'qty2')">+</button>
+        </div>
+        <div class="nominal-option">
+          <span>344 Diamond - Rp60.000</span>
+          <button type="button" onclick="adjustQty(-1, 'qty3')">-</button>
+          <input type="number" id="qty3" value="0" min="0" readonly />
+          <button type="button" onclick="adjustQty(1, 'qty3')">+</button>
+        </div>
+      </div>
 
       <label for="mlbb-payment">Metode Pembayaran:</label>
       <select id="mlbb-payment" required>
@@ -36,13 +51,33 @@
   </section>
 
   <script>
+    function adjustQty(amount, field) {
+      const input = document.getElementById(field);
+      let val = parseInt(input.value);
+      if (!isNaN(val)) {
+        val += amount;
+        if (val < 0) val = 0;
+        input.value = val;
+      }
+    }
+
     document.getElementById("topupForm").addEventListener("submit", function (e) {
       e.preventDefault();
 
       const id = document.getElementById("mlbb-id").value;
-      const nominal = document.getElementById("mlbb-nominal").value;
       const payment = document.getElementById("mlbb-payment").value;
       const name = document.getElementById("mlbb-name").value;
+
+      const qty1 = parseInt(document.getElementById("qty1").value);
+      const qty2 = parseInt(document.getElementById("qty2").value);
+      const qty3 = parseInt(document.getElementById("qty3").value);
+
+      let nominalList = [];
+      if (qty1 > 0) nominalList.push(`${qty1} x 86 Diamond`);
+      if (qty2 > 0) nominalList.push(`${qty2} x 172 Diamond`);
+      if (qty3 > 0) nominalList.push(`${qty3} x 344 Diamond`);
+
+      const nominal = nominalList.join(', ');
 
       const pesan = `🛒 Pesanan Top Up\nGame: Mobile Legends\nID: ${id}\nNominal: ${nominal}\nPembayaran: ${payment}\nNama: ${name}`;
       const nomorAdmin = "6285713056206";
