--- a/mlbb.html
+++ b/mlbb.html
@@ -8,7 +8,7 @@
   <style>
     body {
       background-color: #000;
-      color: #fff;
+      color: #003366;
       font-family: Arial, sans-serif;
     }
     .diamond-list {
@@ -26,9 +26,9 @@
       padding: 12px;
       border: 1px solid #ccc;
       border-radius: 12px;
-      background: #fff;
+      background: silver;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      color: #003366;
+      <div style="font-size: 14px; color: #003366;"><strong style="font-size: 13px;">$1</strong><br><span style="font-size: 12px;">$2</span></div>
       transition: transform 0.2s, box-shadow 0.2s;
     }
     .diamond-item:hover {
