--- a/mlbb.html
+++ b/mlbb.html
@@ -85,15 +85,14 @@
   </style>
 </head>
 <body>
-  <section class="form-section">
-    <div class="diamond-list">
-        <div class="diamond-item">
-          <img src="assets/images/diamond.png" alt="Diamond" />
+  <div class="diamond-list" style="margin-left: 10%;">
+        <div class="diamond-item" style="background: transparent; border: none; box-shadow: none;">
+          <img src="assets/image/diamond.png" alt="Diamond" />
           <div style="flex-grow:1; font-size: 14px; color: #003366;"><strong style="font-size: 13px;">$1</strong><br><span style="font-size: 12px;">$2</span></div><img src='assets/images/diamond.png' alt='Diamond' style='width:24px;height:24px;'/>
           <button type="button" onclick="showDetail('86 Diamond', 'Rp15.000')">Pilih</button>
         </div>
         <div class="diamond-item">
-          <img src="assets/images/diamond.png" alt="Diamond" />
+          <img src="assets/image/diamond.png" alt="Diamond" />
           <div>
             <strong>172 Diamond</strong>
             <p>Rp30.000</p>
@@ -101,7 +100,7 @@
           <button type="button" onclick="showDetail('86 Diamond', 'Rp15.000')">Pilih</button>
         </div>
         <div class="diamond-item">
-          <img src="assets/images/diamond.png" alt="Diamond" />
+          <img src="assets/image/diamond.png" alt="Diamond" />
           <div>
             <strong>344 Diamond</strong>
             <p>Rp60.000</p>
@@ -117,7 +116,7 @@
           <button type="button" onclick="showDetail('86 Diamond', 'Rp15.000')">Pilih</button>
         </div>
         <div class="diamond-item">
-          <img src="assets/images/diamond.png" alt="Diamond" />
+          <img src="assets/image/diamond.png" alt="Diamond" />
           <div>
             <strong>2.000 Diamond</strong>
             <p>Rp300.000</p>
@@ -125,7 +124,7 @@
           <button type="button" onclick="showDetail('86 Diamond', 'Rp15.000')">Pilih</button>
         </div>
         <div class="diamond-item">
-          <img src="assets/images/diamond.png" alt="Diamond" />
+          <img src="assets/image/diamond.png" alt="Diamond" />
           <div>
             <strong>4.000 Diamond</strong>
             <p>Rp400.000</p>
@@ -133,8 +132,6 @@
           <button type="button" onclick="showDetail('86 Diamond', 'Rp15.000')">Pilih</button>
         </div>
       </div>
-    </form>
-  </section>
 
   <script>
     function adjustQty(amount, field) {
